{
    "name": "InputActions",
    "maps": [
        {
            "name": "PlayerActions",
            "id": "b6a47df1-132c-4020-bf58-c2a0be1aebae",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "a405461f-7e9d-450c-943e-fc4ee8397e27",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "eebeabe7-8720-4347-9a84-042a002c0183",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "eafd2eaa-f747-44a6-9dee-50ed81e2482b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "9a42b2d8-af20-413f-8c6c-b3857f7c56cf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Guard",
                    "type": "Button",
                    "id": "beb905a2-ee98-4047-aa13-b08cdd6df1bc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MainMenu",
                    "type": "Button",
                    "id": "8b890f61-95b1-4dfd-a5c8-a026c16e0f99",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Confirm",
                    "type": "Button",
                    "id": "6e249586-a0f6-4c67-9afb-0aaa031b7df1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchQuickItem",
                    "type": "Button",
                    "id": "3f9a4d5d-c4d3-485b-9eb0-c5cf2fee5b0c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ConsumeQuickItem",
                    "type": "Button",
                    "id": "574ca485-8115-49b7-bb61-67be042a389e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FavoriteItem",
                    "type": "Button",
                    "id": "5cc501be-29ee-4b65-8409-5d2a6d2c0ee1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuickSave",
                    "type": "Button",
                    "id": "8d7aac13-6e39-4f6f-991f-684251fb1f4c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuickLoad",
                    "type": "Button",
                    "id": "19914937-82d2-491d-8b46-76fb91f19ab5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Movement Keys",
                    "id": "8b8a2c3f-a070-4dfb-b3ee-ab9bcf5049fa",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5bc7c8d2-adf1-4083-aad4-49667436ed93",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "624750fc-5edf-4024-a163-d02e21480b65",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "122a428a-f25c-4048-95b7-fde7cda87ae7",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "139e88e5-2be9-4f44-826c-a71b32f47d61",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "WASD Keys",
                    "id": "8193b8a9-3db0-4f13-9266-cf6520700fb8",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "947c181b-f9ed-4688-955f-9d18b8c2febf",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a164d44e-1384-4b63-9b1c-a5815e11b1ab",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "74c256a8-f661-4aa3-b5ca-c2d2089ef179",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ce587208-8f7a-4316-b8f2-dc4a1e278c70",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3e56f64a-355a-44d3-b24e-c12f5359527c",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "022c5a84-4fbc-430f-8136-43ec18e25af1",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "95fdaf7f-12e9-4adf-b2ec-68ba958dbe5f",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62abafd9-d8e3-4c18-954c-d7fd98cfd682",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "724fdf28-4234-485a-bba0-4a7a2b2982b9",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b8ddac27-9b50-4ad5-912e-5d913549a342",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c7d57de-85e6-4de3-a6d0-649b99556395",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8235744-5cf6-465e-a6da-1aac64ba4742",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Guard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce2f0d6e-d809-41ab-82c5-4eae36ef888d",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Guard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e955a748-ffd0-4d52-a783-e2113530d38a",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MainMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4bde26f5-8874-40e1-a7e3-aa08a0738527",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MainMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "03a18087-302f-4e7a-b18a-7fbfacbfbb34",
                    "path": "<Keyboard>/z",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c1f2b85-761a-4c13-8bd4-04c2dadaa938",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92f77636-fc85-4a89-adac-2f4ba173f8e2",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3b4789c2-d36c-4d33-9bb3-4910cf726caa",
                    "path": "<Keyboard>/numpad1",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchQuickItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52e3971d-e94e-4d9d-9f91-d5d1bc0481e6",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchQuickItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3abe291-5c80-47a8-939c-5f65c86902b2",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchQuickItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "10f0acf6-96a0-4784-9116-7fe63e022811",
                    "path": "<Keyboard>/r",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ConsumeQuickItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "189ca936-418a-4afd-8031-3e5e240a2143",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ConsumeQuickItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a35bef8-5e9b-4c6c-948a-3b32762a225d",
                    "path": "<Keyboard>/f",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "FavoriteItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cda1da29-0431-43f2-9955-53aa96e550f1",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FavoriteItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c9b30604-8cc5-465b-88ff-71b25988fd46",
                    "path": "<Keyboard>/f5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuickSave",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "95340c74-e41e-40f6-8665-e19c5352e581",
                    "path": "<Keyboard>/f9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuickLoad",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}